main.tf
resource "azurerm_resource_group" "lab_rg" {
    name = "lab8-rg"
    location = "East US"
}
resource "azurerm_virtual_network" "lab_vnet" {
    name = "lab8-vnet"
    address_space = ["10.0.0.0/16"]
    location = azurerm_resource_group.lab_rg.location
    resource_group_name = azurerm_resource_group.lab_rg.name
}
resource "azurerm_subnet" "lab_subnet" {
    name = "lab8-subnet"
    resource_group_name = azurerm_resource_group.lab_rg.name
    virtual_network_name = azurerm_virtual_network.lab_vnet.name
    address_prefixes = ["10.0.1.0/24"]
}

resource "azurerm_public_ip" "lab_public_ip" {
    name = "lab8-public-ip"
    location = azurerm_resource_group.lab_rg.location
    resource_group_name = azurerm_resource_group.lab_rg.name
    allocation_method = "Dynamic"
    sku = "Basic"
}
resource "azurerm_network_security_group" "lab_nsg" {
    name = "lab8-nsg"
    location = azurerm_resource_group.lab_rg.location
    resource_group_name = azurerm_resource_group.lab_rg.name
    security_rule {
        name = "SSH"
        priority = 1001
        direction = "Inbound"
        access = "Allow"
        protocol = "Tcp"
        source_port_range = "*"
        destination_port_range = "22"
        source_address_prefix = "*"
        destination_address_prefix = "*"
    }
    security_rule {
        name = "HTTP"
        priority = 1002
        direction = "Inbound"
        access = "Allow"
        protocol = "Tcp"
        source_port_range = "*"
        destination_port_range = "80"
        source_address_prefix = "*"
        destination_address_prefix = "*"
        }
        security_rule {
        name = "HTTPS"
        priority = 1003
        direction = "Inbound"
        access = "Allow"
        protocol = "Tcp"
        source_port_range = "*"
        destination_port_range = "443"
        source_address_prefix = "*"
        destination_address_prefix = "*"
        }
}



resource "azurerm_network_interface_security_group_association" "lab_nic_nsg" {

  network_interface_id = azurerm_network_interface.lab_nic.id

  network_security_group_id = azurerm_network_security_group.lab_nsg.id

}

resource "azurerm_network_interface" "lab_nic" {
   name = "lab8-nic"
   location = azurerm_resource_group.lab_rg.location
   resource_group_name = azurerm_resource_group.lab_rg.name

   ip_configuration {
     name = "internal"
     subnet_id = azurerm_subnet.lab_subnet.id
     private_ip_address_allocation = "Dynamic"
     public_ip_address_id = azurerm_public_ip.lab_public_ip.id
  }
}

resource "azurerm_linux_virtual_machine" "lab_vm" {
  name = "lab8-vm"
  resource_group_name = azurerm_resource_group.lab_rg.name
  location = azurerm_resource_group.lab_rg.location
  size = "Standard_D2s_v3"
  admin_username = "azureuser"
  admin_password = var.admin_password
  disable_password_authentication = false
  network_interface_ids = [
  azurerm_network_interface.lab_nic.id,
  ]

os_disk {
   caching = "ReadWrite"
  storage_account_type = "Standard_LRS"
}

source_image_reference {
  publisher = "Canonical"
  offer = "0001-com-ubuntu-server-jammy"
   sku = "22_04-lts-gen2"
  version = "latest"
  }
}
